fix(md-floating-modal): correct header text elision and remove scrollbar

--- a/web-components/src/components/floating-modal/scss/floating.scss
+++ b/web-components/src/components/floating-modal/scss/floating.scss
@@ -60,7 +60,7 @@
       text-align: left;
       white-space: nowrap;
       text-overflow: ellipsis;
-      overflow: auto;
+      overflow: hidden;
     }
   }
 
